# cortex

./: .dockerignore  .env.example  .gitignore  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml  los.txt  pyproject.toml  run_client.py  run_server.py  setup.bat  setup.sh  tool_calls.txt
client/: client_main.py  enroll_speaker.py  requirements.txt
client/audio/: mic.py  playback.py  speaker_verify.py  stt_assemblyai.py  stt_elevenlabs_ws.py  stt_whisper_local.py  tts_elevenlabs.py  tts_kokoro.py  tts_local.py  vad_silero.py  wakeword.py
client/audio/turn/: __init__.py  base_turn_analyzer.py
landing/: .env.example  index.html  package-lock.json  package.json
landing/src/app/: globals.css  layout.tsx  page.tsx
landing/src/lib/: elevenlabs.ts  llm.ts
personality/: nova.yaml
scripts/: download_models.py  train_jointbert.py
server/: requirements.txt  setup_gmail.py  setup_outlook.py
server/app/: config.py  fastpath.py  main.py  orchestrator.py
server/app/agents/: __init__.py  router.py
server/app/auth/: google.py
server/app/behaviors/: events.py  manager.py  rules.py
server/app/devices/: controller.py  homeassistant_driver.py  mqtt_driver.py  registry.py
server/app/integrations/: schemas.py
server/app/llm/: __init__.py  base.py  groq_provider.py  local_vision.py
server/app/memory/: __init__.py  context_retriever.py  embeddings.py  schemas.py  store.py  vector_index.py
server/app/nlu/: inference.py  intent_map.py  (+1 more)
shared/schemas/: __init__.py  events.py  memory.py  tool_calls.py
ui/kiosk/: app.js  index.html  styles.css
(+29 files in other folders)
